WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178650
REGRESSION(
r219675
): Web Inspector: CommandLineAPI getEventListeners does not work
https://bugs.webkit.org/show_bug.cgi?id=178650
Summary
REGRESSION(r219675): Web Inspector: CommandLineAPI getEventListeners does not...
Joseph Pecoraro
Reported
2017-10-22 15:25:44 PDT
REGRESSION(
r219675
): Web Inspector: CommandLineAPI getEventListeners does not work After refactoring the code had: if (m_domAgent) return; Instead of: if (!m_domAgent) return; --- Add a test, and modernize the results to match other browsers by including more information about the listeners.
Attachments
[PATCH] Proposed Fix
(8.55 KB, patch)
2017-10-22 15:29 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-10-22 15:28:12 PDT
<
rdar://problem/35116347
>
Joseph Pecoraro
Comment 2
2017-10-22 15:29:03 PDT
Created
attachment 324534
[details]
[PATCH] Proposed Fix
Joseph Pecoraro
Comment 3
2017-10-22 15:29:57 PDT
Found this by looking at static analyzer warnings in inspector code.
WebKit Commit Bot
Comment 4
2017-10-22 17:43:42 PDT
Comment on
attachment 324534
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 324534 Committed
r223826
: <
https://trac.webkit.org/changeset/223826
>
WebKit Commit Bot
Comment 5
2017-10-22 17:43:44 PDT
All reviewed patches have been landed. Closing bug.
Joseph Pecoraro
Comment 6
2017-10-22 18:35:27 PDT
Comment on
attachment 324534
[details]
[PATCH] Proposed Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=324534&action=review
> LayoutTests/inspector/console/command-line-api-getEventListeners.html:26 > + InspectorTest.debug();
Oops, I'll remove this at some point. Its not harmful to land with this in it just generates unnecessary stderr.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug