REGRESSION(r219675): Web Inspector: CommandLineAPI getEventListeners does not work https://bugs.webkit.org/show_bug.cgi?id=178650 <rdar://problem/35116347>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-10-22
Reviewed by Sam Weinig.

Source/WebCore:

Test: inspector/console/command-line-api-getEventListeners.html

* inspector/CommandLineAPIHost.cpp:
(WebCore::listenerEntriesFromListenerInfo):
Fix typo.

(WebCore::CommandLineAPIHost::getEventListeners):
Fix incorrect early return.

* inspector/CommandLineAPIHost.h:
* inspector/CommandLineAPIHost.idl:
Add more attributes about the listener. These new attributes match output from Chrome.

LayoutTests:

* inspector/console/command-line-api-getEventListeners-expected.txt: Added.
* inspector/console/command-line-api-getEventListeners.html: Added.

Canonical link: https://commits.webkit.org/194824@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223826 268f45cc-cd09-0410-ab3c-d52691b4dbfc