Source/WebCore/inspector/CommandLineAPIHost.h
@@ -92,8 +92,10 @@ public:
     void inspect(JSC::ExecState&, JSC::JSValue objectToInspect, JSC::JSValue hints);
 
     struct ListenerEntry {
-        JSC::Strong<JSC::JSObject> function;
+        JSC::Strong<JSC::JSObject> listener;
         bool useCapture;
+        bool passive;
+        bool once;
     };
 
     using EventListenersRecord = Vector<WTF::KeyValuePair<String, Vector<ListenerEntry>>>;
